@@ -6,6 +6,7 @@
   (Manual entry into UI date widget is broken)
 * Take colours for image viewer from theme. Closes Debian bug #893025
   (White UI background makes page borders disappear)
+* Support Glib::Object::Introspection < 0.043
 
 
 2.0.1 (12.03.2018):
